initial page laod with chars, needs douglasses integration

--- a/server/assets/desktop/html/index.html
+++ b/server/assets/desktop/html/index.html
@@ -1,8 +1,10 @@
 <html>
 <head>
-<title>desktop index</title>
+<title>Crowdpleasing</title>
 </head>
 <body>
-<p>Desktop</p>
+<h1>The Word</h1>
+<p>A game about something with some stuff in here.</p>
+<p><a href="/game">Play!</a></p>
 </body>
 </html>
